Upgrade Java 7 to Java 8: modernize APIs, parameterized logging, java.time usage
- Update maven-compiler-plugin to target Java 1.8
- Replace string concatenation in SLF4J logging with parameterized {} placeholders across all source and test files
- Replace SimpleDateFormat with java.time.format.DateTimeFormatter
- Replace GregorianCalendar/Calendar with java.time APIs (LocalDate, ZonedDateTime, ZoneId)
- Remove unused Calendar imports
- Update README with Java 8 setup instructions

Co-Authored-By: Sam Fertig <sam.huntfertig@gmail.com>